テスト/src/objects/assign_SFO__c.object
<CustomObject>
    <fields>
        <fullName>assigned_end__c</fullName>
        <label>アサイン期間_終了</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>assigned_order__c</fullName>
        <label>担当案件</label>
        <referenceTo>order_SFO__c</referenceTo>
        <relationshipName>assign_order</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>assigned_start__c</fullName>
        <label>アサイン期間_開始</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>assigned_team__c</fullName>
        <label>担当チーム</label>
        <referenceTo>team_SFO__c</referenceTo>
        <relationshipName>assign_team</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>order_start_date__c</fullName>
        <formula>assigned_order__r.order_start_date__c</formula>
        <label>開始日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ordername__c</fullName>
        <formula>assigned_order__r.ordername__c</formula>
        <label>案件名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ordertype__c</fullName>
        <formula>TEXT ( assigned_order__r.ordertype__c )</formula>
        <label>案件種別</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>scheduled_date__c</fullName>
        <formula>assigned_order__r.scheduled_date__c</formula>
        <label>終了予定日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>teamleader__c</fullName>
        <formula>assigned_team__r.teamleader__r.Name</formula>
        <label>チームリーダー</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>trainingterm__c</fullName>
        <formula>TEXT ( assigned_team__r.trainingterm__c )</formula>
        <label>訓練期間</label>
        <type>Text</type>
    </fields>
    <label>アサイン</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>AS{00000}</displayFormat>
        <label>アサインコード</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>